# niouzou

./: .env.example  .gitignore  CLA.md  CLAUDE.md  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  railway.json  railway.toml
.claude/: settings.json
.github/workflows/: ci.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  cron-enrich.railway.toml  cron-fetch.railway.toml  cron-refresh-weights.railway.toml  docker-compose.dev.yml  docker-entrypoint.sh  pyproject.toml  railway.toml  refresh-worker.railway.toml
api/niouzou/: config.py  db.py  deps.py  errors.py  main.py  mcp_app.py  middleware.py  pagination.py  security.py
api/niouzou/crons/: enrich.py  fetch.py  nightly_refresh.py  refresh_weights.py  run_once.py
api/niouzou/migrations/: env.py
api/niouzou/migrations/versions/: 0b7e5f2c8a1d_nuclear_fix_admin.py  1286f25de7b8_initial_schema.py  2a1f4c9b7e30_epic3_additions.py  3b8c5e2a91f4_relevance_score_scorer.py  4c1f8a7b2d5e_enrichment_method_error.py  5d2a9f1c8b3e_multi_user_article_dedup.py  6e3d4c1a2f87_user_is_admin.py  7a4f1e9b0c12_app_settings.py  8f5d2e9c1a4b_promote_all_users_to_admin.py  9a6c3f8d2e5a_force_migration_execution.py  9b1c4f7a2e08_feedback_split.py  a01f7c9b3d2e_pipeline_runs.py  a1c4e7f2b9d6_chat_usage_and_prompt.py  aab1c2d3e4f5_llm_prompts.py  b12c8d4f6a93_enrichment_model.py  b7e1a4c9f2d0_service_account_keys.py  bbc2d4e5f6a7_drop_summary_short_from_prompt.py  c1f7a3b9e2d5_purge_legacy_mcp_keys.py  c3e9d5a2f481_compaction_runs.py  c7d4e8f2a619_article_embedding.py  d4f7e6a89c12_cold_start_flag.py  d8e2f5a91c47_dual_scores.py  d9f3a6c2e8b1_tags_source_tags.py  e3a9c1f47d28_relevance_user_index.py  e5a8b1c4f9d2_source_cascade.py  f4b8d2a91c63_llm_usage_log.py  f6b9c2d18e4a_user_cascade.py
api/niouzou/models/: __init__.py  app_setting.py  article.py  article_feedback.py  article_impression.py  article_keyword.py  article_relevance_score.py  compaction_run.py  keyword_weight.py  llm_prompt.py  llm_usage_log.py  pipeline_run.py  service_account_key.py  source.py  tag.py  user.py
api/niouzou/routers/: __init__.py  admin.py  articles.py  auth.py  explore.py  feed.py  feedback.py  keywords.py  mcp.py  me.py  saved.py  sources.py  stats.py  tags.py
api/niouzou/schemas/: __init__.py  admin.py  articles.py  auth.py  chat.py  explore.py  feed.py  feedback.py  keywords.py  me.py  service_account.py  sources.py  stats.py  tags.py
api/niouzou/scoring/: __init__.py  ai_keyword.py  base.py  pipeline.py  smart_match.py  stopwords.py  tfidf.py
api/niouzou/scripts/: ensure_miniflux_db.py
api/niouzou/services/: admin_models_service.py  articles_service.py  auth_service.py  chat_service.py  compaction_service.py  embedding_service.py  enrichment_service.py  explore_service.py  feed_service.py  feedback_service.py  keywords_service.py  llm_prompts_service.py  mcp_service.py  me_service.py  miniflux_bootstrap.py  miniflux_client.py  openrouter_client.py  ranked_query.py  saved_service.py  scoring_service.py  service_account_service.py  settings_service.py  sources_service.py  stats_service.py  tags_service.py  weights.py  worker_client.py
api/niouzou/tools/: __init__.py  backfill_boilerplate_content.py  backfill_embeddings.py
api/niouzou/workers/: refresh_worker.py
api/scripts/dev/: README.md  seed_demo.py
api/tests/: conftest.py  factories.py  fake_embeddings.py  test_admin.py  test_ai_keyword.py  test_auth_service.py  test_chat.py  test_cold_start.py  test_compaction.py  test_cron_fetch.py  test_dual_scores_migration.py  test_embeddings.py  test_endpoints.py  test_enrich.py  test_explore_filters.py  test_explore_history.py  test_explore_new.py  test_explore_search.py  test_feed_service.py  test_feed_start_param.py  test_feedback_idempotence.py  test_feedback_migration.py  test_feedback_partial_upsert.py  test_forwarded_host.py  test_mcp.py  test_miniflux_client.py  test_openrouter_usage.py  test_pipeline_runs.py  test_ranked_query.py  test_refresh_worker.py  test_reset_reco.py  test_scoring.py  test_smart_match.py  test_sources_service.py  test_tags.py  test_weights.py  test_weights_formula.py  test_worker_client.py
docs/: API_SPEC.md  ARCHITECTURE.md  CONVENTIONS.md  DATA_MODEL.md  DESIGN_SYSTEM.md  EPICS.md  PRD.md  RAILWAY_TEMPLATE.md  RAILWAY_TEMPLATE_SETUP.md
docs/mockups/: article-chat-mockups.html
infra/postgres-init/: 01-miniflux.sh
pwa/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  railway.toml
pwa/public/: manifest.json
pwa/src/: App.tsx  index.css  main.tsx
pwa/src/api/: http.ts  index.ts
pwa/src/components/: ArticleCard.tsx  ArticleChatSheet.tsx  ArticleListRow.tsx  BlobBackground.tsx  BottomNav.tsx  EmptyState.tsx  ErrorState.tsx  FeedArticleSlide.tsx  FeedbackStateIcons.tsx  FilterChip.tsx  KeywordTag.tsx  Modal.tsx  ScoreBadge.tsx  ScoreDebugSheet.tsx  ScrollBoundaryHint.tsx  SourceTagsEditor.tsx  Spinner.tsx  TagsSection.tsx
pwa/src/hooks/: useApiData.ts  useInfiniteScroll.ts  useLoupe.ts  usePullToRefresh.ts  useShareArticle.ts  useTimeAgo.ts
pwa/src/mocks/: articles.ts
pwa/src/screens/: Admin.tsx  ArticleDetail.tsx  ArticleView.tsx  Explore.tsx  ExplorePlaceholder.tsx  Feed.tsx  Keywords.tsx  Login.tsx  Profile.tsx  Register.tsx  Saved.tsx  Sources.tsx
pwa/src/store/: auth.ts  feed.ts  feedback.ts
pwa/src/types/: api.ts
scripts/: cloud_session_setup.sh
