[project]
name = "niouzou"
version = "0.1.0"
description = "Self-hostable, mobile-first news aggregator with a swipe interface"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "newspaper4k>=0.9.3",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "respx>=0.21",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["niouzou"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
