[project]
name = "niouzou"
version = "0.1.0"
description = "Self-hostable, mobile-first news aggregator with a swipe interface"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "openrouter>=0.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "newspaper4k>=0.9.3",
    "apscheduler>=3.10",
    # Pinned >=6.1 to get the safe default `resolve_entities='internal'` for
    # iterparse + ETCompatXMLParser (CVE-2026-XXXX). newspaper4k feeds untrusted
    # HTML/XML from RSS sources through lxml — older defaults allowed XXE-style
    # local-file reads.
    "lxml>=6.1",
    # SQLAlchemy/asyncpg adapter for the Postgres `vector` type (E16-S1).
    "pgvector>=0.3",
]

[project.optional-dependencies]
# Local embedding model for Smart Match (E16). Optional on purpose: without
# it the instance runs Classic scoring only, articles keep embedding = NULL,
# and the admin toggle refuses 'smart' (E16-S4). The Docker image installs it
# (see api/Dockerfile); bare-metal: `uv sync --extra embeddings`.
embeddings = [
    "sentence-transformers>=3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "respx>=0.21",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["niouzou"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
