[project]
name = "niouzou"
version = "0.1.0"
description = "Self-hostable, mobile-first news aggregator with a swipe interface"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "openrouter>=0.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "newspaper4k>=0.9.3",
    "apscheduler>=3.10",
    # Pinned >=6.1 to get the safe default `resolve_entities='internal'` for
    # iterparse + ETCompatXMLParser (CVE-2026-XXXX). newspaper4k feeds untrusted
    # HTML/XML from RSS sources through lxml — older defaults allowed XXE-style
    # local-file reads.
    "lxml>=6.1",
    # SQLAlchemy/asyncpg adapter for the Postgres `vector` type (E16-S1).
    "pgvector>=0.3",
    # Official MCP SDK — powers the FastMCP server exposed at /mcp (E22).
    "mcp>=1.12",
]

[project.optional-dependencies]
# Local embedding model for Smart Match (E16). Optional on purpose: without
# it the instance runs Classic scoring only, articles keep embedding = NULL,
# and the admin toggle refuses 'smart' (E16-S4). The Docker image installs it
# (see api/Dockerfile); bare-metal: `uv sync --extra embeddings`.
embeddings = [
    "sentence-transformers>=3.3",
    # Declared directly (it's transitive via sentence-transformers) so the
    # [tool.uv.sources] CPU-index pin below applies to it.
    "torch>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "respx>=0.21",
]

[tool.uv]
default-groups = ["dev"]

# torch is pulled in by sentence-transformers (extra `embeddings`). The
# default PyPI wheels bundle the CUDA stack on Linux (~5 GB of nvidia-* libs
# we never use — embedding runs on CPU). Pin torch to the official CPU index
# so the Docker image stays small enough for Railway.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["niouzou"]

[tool.ruff]
target-version = "py313"
# Alembic revision files are autogenerated — don't lint their import noise.
extend-exclude = ["niouzou/migrations/versions"]

[tool.ruff.lint]
# Conservative high-signal set: pyflakes (real bugs — undefined names, unused
# imports/vars) + pycodestyle errors + import sorting. Deliberately NOT the
# full pycodestyle/pyupgrade churn so the gate stays meaningful, not noisy.
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Upstream-internal Starlette deprecations (starlette 1.3.x, a transitive pin of
# FastAPI), not anything in our code: the TestClient nudges towards httpx2, and
# Starlette's own exception handler still references the pre-rename HTTP_422
# constant. Nothing to fix on our side until FastAPI ships a Starlette that drops
# them — silence the whole category so the suite output stays clean.
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]
